--- a/src/main/resources/templates/Query/show.html
+++ b/src/main/resources/templates/Query/show.html
@@ -159,6 +159,27 @@ document.addEventListener("DOMContentLoaded", function() {
                                             <option value="false">С ПРЕВОДНО НАРЕЖДАНЕ</option>
                                         </select>
                                     </div>
+                                    <div class="form-group" id="bankAccountGroup" style="display: none;">
+                                    <label for="bankAccount">Банкова сметка: </label>
+                                    <select class="form-control small-input" id="bankAccount" name="bankAccount">
+                                        <option value="BG56-UNCR-7000-1523215088 УНИКРЕДИТ БУЛБАНК АД" th:text="${'BG56-UNCR-7000-1523215088 УНИКРЕДИТ БУЛБАНК АД'}"></option>
+                                        <option value="BG84-BPBI-7943-1076363002 ЮРОБАНК БЪЛГАРИЯ АД" th:text="${'BG84-BPBI-7943-1076363002 ЮРОБАНК БЪЛГАРИЯ АД'}"></option>
+                                        <option value="BG06-DEMI-9240-1000326433 ТЪРГОВСКА БАНКА Д АД" th:text="${'BG06-DEMI-9240-1000326433 ТЪРГОВСКА БАНКА Д АД'}"></option>
+                                    </select>
+                                    </div>
+
+                                    <script th:inline="javascript">
+                                        $(document).ready(function () {
+                                          $('#paymentMethod').change(function () {
+                                            var selectedValue = $(this).val();
+                                            if (selectedValue === 'false') {
+                                              $('#bankAccountGroup').show();
+                                               } else {
+                                               $('#bankAccountGroup').hide();
+                                             }
+                                           });
+                                         });
+                                    </script>
                                     <div class="form-group">
                                         <label for="dateInput">Дата на падеж:</label>
                                         <input class="form-control small-input" type="date" id="dateInput"
@@ -186,4 +207,5 @@ document.addEventListener("DOMContentLoaded", function() {
 </div>
 </body>
 <script src="/js/invoice.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </html>
