- add productCode to packages - add search by productCode - replace id with productCode in pages related to packages

--- a/src/main/resources/templates/MonthlyOrder/orderDetails.html
+++ b/src/main/resources/templates/MonthlyOrder/orderDetails.html
@@ -71,7 +71,7 @@ document.addEventListener("DOMContentLoaded", function() {
                                         <td>
                                             <img th:src="@{${backendBaseUrl} + '/'+ ${products[iter.index]?.photo}}" alt="no image" height="100" width="100">
                                         </td>
-                                        <td th:text="${products[iter.index]?.name}"></td>
+                                        <td th:text="${products[iter.index]?.productCode} + ' ' + ${products[iter.index]?.name}"></td>
                                         <td th:text="${orderProduct.orderedQuantity}"></td>
                                         <td th:text="${orderProduct.sentQuantity}"></td>
                                         <td th:text="${orderProduct.orderedQuantity - orderProduct.sentQuantity}"></td>
