add design to upload file form

--- a/src/main/resources/templates/uploadFile.html
+++ b/src/main/resources/templates/uploadFile.html
@@ -14,6 +14,9 @@ document.addEventListener("DOMContentLoaded", function() {
     navbar.classList.toggle("collapsed");
     });
 });
+
+
+
 </script>
 <body>
 <div class="wrapper">
@@ -27,11 +30,40 @@ document.addEventListener("DOMContentLoaded", function() {
             </a>
         </nav>
         <main class="d-flex w-100">
-            <form th:action="@{/upload/file/submit}" th:method="post" enctype="multipart/form-data">
-                <input type="file" name="file" required />
-                <br/>
-                <button type="submit">Upload</button>
-            </form>
+            <div class="container d-flex flex-column">
+                <div class="row vh-150">
+                    <div class="col-sm-10 col-md-8 col-lg-6 col-xl-8 mx-auto d-table h-100">
+                        <div class="d-table-cell align-middle">
+                            <div class="text-center mt-7">
+                                <div class="alert alert-primary d-flex align-items-center" role="alert">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img" aria-label="Warning:">
+                                        <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                                    </svg>
+                                    <div>
+                                        Формата по-долу изисква качването на файл с цялата информация за кутиите в Lukeria.</br>
+                                        Каченият файл трябва да бъде разработен в Excel. </br>
+                                        Информацията във файла трябва да бъде в следната последователност от колони:</br>
+                                        product_code,    name,    available_quality,   carton_id,   plate_id,    pieces_carton,   photo,   price,   english_name,    is_deleted
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-body">
+                                    <div class="m-sm-3">
+                                        <form th:action="@{/upload/file/submit}" th:method="post"
+                                              enctype="multipart/form-data">
+                                            <label class="form-label">Изберета файла съдъжащ информацията за кутиите: </label>
+                                            <input class="form-control form-control-lg" id="formFileLg" type="file" name="file" required />
+                                            <br/>
+                                            <button class="btn btn-secondary" type="submit">Качи</button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
     </div>
 </div>
