make some fields nullable and change front-end validations

--- a/src/main/resources/templates/Carton/create.html
+++ b/src/main/resources/templates/Carton/create.html
@@ -38,15 +38,13 @@ document.addEventListener("DOMContentLoaded", function() {
                         <form action="/submit" method="post">
                             <div class="form-group">
                                 <label for="name">Име:</label>
-                                <input type="text" id="name" name="name" pattern=".{10,}"
-                                       title="Моля въведете името на кашона с поне 10 символа!" required
+                                <input type="text" id="name" name="name" required
                                        th:value="${carton.name}"/>
                                 <div class="error-message"></div>
                             </div>
                             <div class="form-group">
                                 <label for="size">Размери:</label>
-                                <input type="text" id="size" name="size" pattern=".{10,}"
-                                       title="Моля въведете размерите на кашона с поне 10 символа!" required
+                                <input type="text" id="size" name="size" required
                                        th:value="${carton.size}"/>
                                 <div class="error-message"></div>
                             </div>
