--- a/src/main/resources/templates/Package/create.html
+++ b/src/main/resources/templates/Package/create.html
@@ -56,7 +56,7 @@ document.addEventListener("DOMContentLoaded", function() {
                             <div class="form-group">
                                 <label for="englishName">Име на английски език:</label>
                                 <input type="text" id="englishName" name="englishName"  pattern="[a-zA-Z0-9\s!@#$%^&*()_+-=[{]};:'|,<.>?]*$"
-                                       title="Моля въведете името на кашона с латински букви!" required
+                                       title="Моля въведете името на кашона с латински букви!"
                                        th:value="${package != null ? package.englishName : ''}"/>
                                 <div class="error-message"></div>
 
