--- a/src/main/resources/templates/Query/show.html
+++ b/src/main/resources/templates/Query/show.html
@@ -47,18 +47,18 @@ document.addEventListener("DOMContentLoaded", function() {
                                 <div class="text-container">
                                     <strong class="underlined" th:text="ПОЛУЧАТЕЛ"></strong>
                                     <h5><strong
-                                            th:text=" ${clientDTOS[orderDTO.clientId - 1].businessName}"></strong>
+                                            th:text=" ${client.businessName}"></strong>
                                     </h5>
                                     <h5><strong
-                                            th:text="'Ид. номер: ' + ${clientDTOS[orderDTO.clientId - 1].idNumEIK}"></strong>
+                                            th:text="'Ид. номер: ' + ${client.idNumEIK}"></strong>
                                     </h5>
-                                    <h5><strong th:if="${clientDTOS[orderDTO.clientId - 1].hasIdNumDDS}">
-                                        <span th:text="'Ид. номер по ДДС: BG' + ${clientDTOS[orderDTO.clientId - 1].idNumEIK}"></span>
+                                    <h5><strong th:if="${client.hasIdNumDDS}">
+                                        <span th:text="'Ид. номер по ДДС: BG' + ${client.idNumEIK}"></span>
                                     </strong></h5>
                                     <h5><strong
-                                            th:text="'Адрес: ' + ${clientDTOS[orderDTO.clientId - 1].address}"></strong>
+                                            th:text="'Адрес: ' + ${client.address}"></strong>
                                     </h5>
-                                    <h5><strong th:text="'МОЛ: ' + ${clientDTOS[orderDTO.clientId - 1].mol}"></strong>
+                                    <h5><strong th:text="'МОЛ: ' + ${client.mol}"></strong>
                                     </h5>
                                 </div>
 
