--- a/src/main/resources/templates/MaterialOrder/create.html
+++ b/src/main/resources/templates/MaterialOrder/create.html
@@ -76,7 +76,7 @@ document.addEventListener("DOMContentLoaded", function() {
                                         <option th:each="package : ${packages}" th:value="${package.id}"
                                                 th:data-image-url="@{${backendBaseUrl} + '/' + ${package.photo}}" >
                                             <img th:src="@{'${backendBaseUrl}' + '/' + ${package.photo}}"  width="50" height="50">
-                                            <span th:text = "${package.name}"></span>
+                                            <span th:text = "${package.productCode} + ' - '+ ${package.name}"></span>
                                         </option>
                                     </select>
                                 </div>
