--- a/src/main/resources/templates/MaterialOrder/edit.html
+++ b/src/main/resources/templates/MaterialOrder/edit.html
@@ -97,7 +97,7 @@ document.addEventListener("DOMContentLoaded", function() {
                             </div>
                             <div class="form-group">
                                 <label for="materialPrice">Обща цена на поръчката:</label>
-                                <input type="number" id="materialPrice" name="materialPrice"
+                                <input type="number" id="materialPrice" name="materialPrice" step="0.01"
                                        th:field="${order.materialPrice}"/>
                             </div>
                             <div class="form-group">
