--- a/src/main/resources/templates/Client/create.html
+++ b/src/main/resources/templates/Client/create.html
@@ -18,12 +18,14 @@ document.addEventListener("DOMContentLoaded", function() {
     });
 });
 
+
 </script>
 <style>
         /* Style to hide English fields by default */
         .english-field {
             display: none;
         }
+
 
 </style>
 
@@ -53,8 +55,21 @@ document.addEventListener("DOMContentLoaded", function() {
                     })
                 ;
             }
-        }
+            var idNumEIKInput = document.getElementById('idNumEIK');
 
+        // Clear previous validation messages
+        var errorMessage = document.querySelector('.error-message');
+        errorMessage.innerHTML = '';
+
+        // Adjust validation rules based on the client's nationality
+        if (isBulgarianClient === 'true') {
+            idNumEIKInput.pattern = '\\d{5}';
+            idNumEIKInput.title = 'Номера по ЕИК трябва да съдържа 5 цифри!';
+        } else {
+            idNumEIKInput.pattern = '.{5,}';
+            idNumEIKInput.title = 'Номера по ЕИК трябва да бъде последователност от 5 знака!';
+        }
+        }
 </script>
 <body>
 <div class="wrapper">
@@ -127,18 +142,22 @@ document.addEventListener("DOMContentLoaded", function() {
                                 <div class="error-message"></div>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="hasIdNumDDS" th:value=true
-                                       id="hasIdNumDDS">
-                                <label class="form-check-label" for="hasIdNumDDS">
-                                    Има Ид. Номер по ДДС
-                                </label>
+                                <div class="form-group english-field">
+                                    <input class="form-check-input" type="radio" name="hasIdNumDDS" th:value=true
+                                           id="hasIdNumDDS">
+                                    <label class="form-check-label" for="hasIdNumDDS">
+                                        Има Ид. Номер по ДДС
+                                    </label>
+                                </div>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="hasIdNumDDS" th:value=false
-                                       id="hasIdNumDDS2">
-                                <label class="form-check-label" for="hasIdNumDDS2">
-                                    Няма Ид. номер по ДДС
-                                </label>
+                                <div class="form-group english-field">
+                                    <input class="form-check-input" type="radio" name="hasIdNumDDS" th:value=false
+                                           id="hasIdNumDDS2">
+                                    <label class="form-check-label" for="hasIdNumDDS2">
+                                        Няма Ид. номер по ДДС
+                                    </label>
+                                </div>
                             </div>
                             <div class="text-center">
                                 <button type="submit" class="btn btn-primary">Създай</button>
