--- a/src/main/resources/templates/Client/edit.html
+++ b/src/main/resources/templates/Client/edit.html
@@ -16,12 +16,14 @@ document.addEventListener("DOMContentLoaded", function() {
     navbar.classList.toggle("collapsed");
     });
 });
+
 </script>
 <style>
         /* Style to hide English fields by default */
         .english-field {
             display: none;
         }
+
 
 </style>
 <script>
@@ -53,7 +55,6 @@ document.addEventListener("DOMContentLoaded", function() {
                 });
             }
         }
-
         // Attach an event listener for the radio buttons to update the fields when the user changes the selection
         var radioButtons = document.getElementsByName("isBulgarianClient");
         radioButtons.forEach(function(radioButton) {
@@ -81,13 +82,17 @@ document.addEventListener("DOMContentLoaded", function() {
                     <div class="card-body">
                         <form th:action="@{'/client/edit/' + ${client.id}}" method="post" th:object="${client}">
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" th:field="*{isBulgarianClient}" name="isBulgarianClient" value=true id="isBulgarianClient" onclick="showHideFields()">
+                                <input class="form-check-input" type="radio" th:field="*{isBulgarianClient}"
+                                       name="isBulgarianClient" value=true id="isBulgarianClient"
+                                       onclick="showHideFields()">
                                 <label class="form-check-label" for="isBulgarianClient">
                                     Клиента е от България
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" th:field="*{isBulgarianClient}" name="isBulgarianClient"  value=false id="isBulgarianClient2" onclick="showHideFields()">
+                                <input class="form-check-input" type="radio" th:field="*{isBulgarianClient}"
+                                       name="isBulgarianClient" value=false id="isBulgarianClient2"
+                                       onclick="showHideFields()">
                                 <label class="form-check-label" for="isBulgarianClient2">
                                     Клиента НЕ е от България
                                 </label>
@@ -101,7 +106,8 @@ document.addEventListener("DOMContentLoaded", function() {
                             </div>
                             <div class="form-group english-field">
                                 <label for="englishBusinessName">Име на фирма на ангрийски език:</label>
-                                <input type="text" id="englishBusinessName" name="englishBusinessName"  pattern="[a-zA-Z0-9\s!@#$%^&*()_+-=[{]};:'|,<.>?]*$"
+                                <input type="text" id="englishBusinessName" name="englishBusinessName"
+                                       pattern="[a-zA-Z0-9\s!@#$%^&*()_+-=[{]};:'|,<.>?]*$"
 
                                        title="Моля въведете името на фирмата на английски език с латински букви!"
                                        th:field="*{englishBusinessName}"/>
@@ -115,7 +121,8 @@ document.addEventListener("DOMContentLoaded", function() {
                             </div>
                             <div class="form-group english-field">
                                 <label for="englishAddress">Адрес на английски език:</label>
-                                <input type="text" id="englishAddress" name="englishAddress" pattern="[a-zA-Z0-9\s!@#$%^&*()_+-=[{]};:'|,<.>?]*$"
+                                <input type="text" id="englishAddress" name="englishAddress"
+                                       pattern="[a-zA-Z0-9\s!@#$%^&*()_+-=[{]};:'|,<.>?]*$"
                                        th:field="*{englishAddress}"/>
                             </div>
                             <div class="form-group bulgarian-field">
@@ -125,28 +132,35 @@ document.addEventListener("DOMContentLoaded", function() {
                             </div>
                             <div class="form-group english-field">
                                 <label for="englishMol">МОЛ на английски език:</label>
-                                <input type="text" id="englishMol" name="address" pattern="[a-zA-Z0-9\s!@#$%^&*()_+-=[{]};:'|,<.>?]*$"
+                                <input type="text" id="englishMol" name="address"
+                                       pattern="[a-zA-Z0-9\s!@#$%^&*()_+-=[{]};:'|,<.>?]*$"
                                        title="Моля въведете името на МОЛ-а на английски език с латински букви!"
                                        th:field="*{englishMol}"/>
                             </div>
                             <div class="form-group">
-                            <label for="idNumEIK">Ид. Номер по ЕИК:</label>
-                            <input type="text" id="idNumEIK" name="idNumEIK" pattern=".{5,}"
-                                   title="Номера по ЕИК трябва да бъде последователност от 5 цифри!"
-                                   th:field="*{idNumEIK}"/>
-                            <div class="error-message"></div>
-                        </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio"  th:field="*{hasIdNumDDS}" name="hasIdNumDDS" th:value= true id="hasIdNumDDS">
-                                <label class="form-check-label" for="hasIdNumDDS">
-                                    Има Ид. Номер по ДДС
-                                </label>
+                                <label for="idNumEIK">Ид. Номер по ЕИК:</label>
+                                <input type="text" id="idNumEIK" name="idNumEIK" pattern=".{5,}"
+                                       title="Номера по ЕИК трябва да бъде последователност от 5 знака!"
+                                       th:field="*{idNumEIK}"/>
+                                <div class="error-message"></div>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" th:field="*{hasIdNumDDS}" name="hasIdNumDDS"  th:value=false id="hasIdNumDDS2">
-                                <label class="form-check-label" for="hasIdNumDDS2">
-                                    Няма Ид. номер по ДДС
-                                </label>
+                                <div class="form-group english-field">
+                                    <input class="form-check-input" type="radio" th:field="*{hasIdNumDDS}"
+                                           name="hasIdNumDDS" th:value=true id="hasIdNumDDS">
+                                    <label class="form-check-label" for="hasIdNumDDS">
+                                        Има Ид. Номер по ДДС
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="form-check">
+                                <div class="form-group english-field">
+                                    <input class="form-check-input" type="radio" th:field="*{hasIdNumDDS}"
+                                           name="hasIdNumDDS" th:value=false id="hasIdNumDDS2">
+                                    <label class="form-check-label" for="hasIdNumDDS2">
+                                        Няма Ид. номер по ДДС
+                                    </label>
+                                </div>
                             </div>
                             <div class="text-center">
                                 <button type="submit" class="btn btn-primary">Редактирай</button>
